Fix margins on collapsed columns

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -390,6 +390,8 @@ section {
 
     .icon-cols {
         display: block;
+        margin-right: 0;
+        margin-left: 0;
 
         .col {
             margin-right: auto;
@@ -436,6 +438,8 @@ section {
     .content-boxes {
         display: block;
         margin-top: 60px;
+        margin-right: 0;
+        margin-left: 0;
 
         .col {
             margin-top: 30px;
